<resources>

    <string name="app_name">Feed Reader</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_subscribe">Subscribe</string>
    <string name="menu_unsubscribe">Unsubscribe</string>
    <string name="menu_edit_feed">Edit Feed</string>
    <string name="menu_mark_as_read">Mark As Read</string>
    <string name="menu_mark_as_unread">Mark As Unread</string>
    <string name="menu_mark_all_as_read">Mark All As Read</string>
    <string name="menu_aggregated_view">Aggregated View</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_view_all">View All</string>
    <string name="menu_view_unread_only">View Unread Only</string>
    <string name="title_activity_main">Feed Reader</string>
    <string name="title_activity_subscribe">Subscribe</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_feed">Feed</string>
    <string name="title_activity_edit_feed">Edit Feed</string>
    <string name="title_activity_feed_item">Feed Item</string>
    <string name="title_activity_aggregated">Aggregated Feed</string>
    <string name="hint_url">news.google.com</string>
    <string name="hint_feed_name">CBC Top Stories</string>
    <string name="button_unsubscribe">Unsubscribe</string>
    <string name="button_subscribe">Subscribe</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_edit_feed">Edit Feed</string>
    <string name="label_subscribe">Enter a feed address</string>
    <string name="label_name">Feed name</string>
    <string name="label_url">Feed address</string>
    <string name="settings_date_format">Date Format</string>
    <string name="settings_time_format">Time Format</string>
    <string name="settings_update_interval">Update Interval</string>
    <string name="settings_enable_notifications">Enable Notifications</string>
    <string name="settings_auto_mark_as_read">Auto Mark As Read</string>
    <string name="settings_summary_update_interval">How often the app checks for updates (in seconds).</string>
    <string name="settings_summary_enable_notifications">Send notifications when a feed is updated.</string>
    <string name="settings_summary_auto_mark_as_read">Automatically mark feed items as read when they are viewed.</string>
    <string name="message_invalid_rss">Could not find a valid RSS file at this address.</string>
    <string name="message_unsubscribe">Unsubscribe from</string>
    <string name="message_content_error">Error reading description.</string>
    <string name="message_validating_url">Validating URL...</string>
    <string name="notification_body">New feed items from</string>
    <string name="default_time_format">H:mm</string>
    <string name="default_date_format">yyyy/MM/dd</string>
    <string name="default_update_interval">15</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_feed_all">FeedAllActivity</string>

</resources>