<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="10dp" >

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:stretchColumns="*" >

        <TableRow
            android:id="@+id/editFeed_tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textViewFeedName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_name" />
        </TableRow>

        <TableRow
            android:id="@+id/editFeed_tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hint_feed_name" >

                <requestFocus />
            </EditText>
        </TableRow>

        <TableRow
            android:id="@+id/editFeed_tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textViewFeedURL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_url" />
        </TableRow>

        <TableRow
            android:id="@+id/editFeed_tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/editTextURL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hint_url"
                android:inputType="textUri" >

                <requestFocus />
            </EditText>
        </TableRow>

        <TableRow
            android:id="@+id/editFeed_tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/buttonEditFeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_edit_feed" />
        </TableRow>
    </TableLayout>

</RelativeLayout>